; ModuleID = '/home/carl/AnghaBench/libgit2/tests/object/extr_cache.c_cache_quick.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/object/extr_cache.c_cache_quick.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64, i32 }

@g_data = common dso_local global %struct.TYPE_2__* null, align 8
@g_repo = common dso_local global i32 0, align 4
@GIT_OBJECT_ANY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8*)* @cache_quick to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @cache_quick(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  store i8* %0, i8** %2, align 8
  %5 = load %struct.TYPE_2__*, %struct.TYPE_2__** @g_data, align 8
  %6 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %5, i64 4
  %7 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %6, i32 0, i32 1
  %8 = load i32, i32* %7, align 8
  %9 = call i32 @git_oid_fromstr(i32* %3, i32 %8)
  %10 = call i32 @cl_git_pass(i32 %9)
  %11 = load i32, i32* @g_repo, align 4
  %12 = load i32, i32* @GIT_OBJECT_ANY, align 4
  %13 = call i32 @git_object_lookup(i32** %4, i32 %11, i32* %3, i32 %12)
  %14 = call i32 @cl_git_pass(i32 %13)
  %15 = load %struct.TYPE_2__*, %struct.TYPE_2__** @g_data, align 8
  %16 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i64 4
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  %19 = load i32*, i32** %4, align 8
  %20 = call i64 @git_object_type(i32* %19)
  %21 = icmp eq i64 %18, %20
  %22 = zext i1 %21 to i32
  %23 = call i32 @cl_assert(i32 %22)
  %24 = load i32*, i32** %4, align 8
  %25 = call i32 @git_object_free(i32* %24)
  %26 = load i8*, i8** %2, align 8
  ret i8* %26
}

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_oid_fromstr(i32*, i32) #1

declare dso_local i32 @git_object_lookup(i32**, i32, i32*, i32) #1

declare dso_local i32 @cl_assert(i32) #1

declare dso_local i64 @git_object_type(i32*) #1

declare dso_local i32 @git_object_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
